@@ -1,6 +1,6 @@
 Package: plm
 Version: 1.2-5
-Date: 2010-05-19
+Date: 2010-07-06
 Title: Linear Models for Panel Data
 Author: Yves Croissant <yves.croissant@univ-reunion.fr, Giovanni Millo <Giovanni_Millo@Generali.com>
 Maintainer: Yves Croissant <yves.croissant@univ-reunion.fr>
